# FTML_RPGF

./: README.md  pyproject.toml  requirements.txt
Exercise1/: Exercise1.ipynb
Exercise2/: Exercice2.ipynb  Exercise2.ipynb
Exercise3/: Exercice3.ipynb  Exercise3.ipynb
Exercise4/: Exercice4.ipynb  Exercise4.ipynb
Exercise5/: Exercise5.ipynb
Exercise6/: Exercise6.ipynb
Exercise7/: Exercise7.ipynb
